--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'global/css/style.css' %}">
-    <title>Document</title>
+    <title></title>
 </head>
 <body>
-    <h1>Teste</h1>
+    <main class="content" >
+        {% block content %}
+        {% endblock %}
+    </main>
 </body>
 </html>
