--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,16 +1,40 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'global/css/style.css' %}">
-    <title></title>
-</head>
-<body>
-    <main class="content" >
-        {% block content %}
-        {% endblock %}
-    </main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'global/css/style.css' %}" />
+    <title>Agenda</title>
+  </head>
+  <body>
+    <header class="header">
+      <h1 class="header-heading">
+        <a href="{% url 'contact:index' %}" class="header-link">Agenda</a>
+      </h1>
+      <nav class="menu">
+        <ul class="menu-list">
+          <li class="menu-item">
+            <a href="{% url 'contact:index' %}" class="menu-link">Contatos</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-link">Novo Contato</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="search">
+        <form action="#" method="GET">
+          <input
+            class="search-input"
+            type="text"
+            name="search"
+            id="search"
+            placeholder="Pesquisar"
+          />
+          
+        </form>
+      </div>
+    </header>
+    <main class="content">{% block content %} {% endblock %}</main>
+  </body>
 </html>
